--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <script src="alert.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Empresa de Venta de Motos</title>
+    <title>Empresa de Motos Kawasaki</title>
     <link rel="stylesheet" href="body {.css">
 </head>
 <body>
     <div class="intro-container">
-        <h1>Bienvenidos a Nuestra Empresa de Venta de Motos Kawasaki</h1>
-        <p>En nuestra empresa, ofrecemos una gran variedad de motos de alta calidad. Aquí podrás encontrar la moto perfecta para ti, con las mejores ofertas y servicios.</p>
+        <h1>Bienvenidos a Nuestra Empresa de  Motos Kawasaki</h1>
+        <p>En nuestra empresa, ofrecemos una gran variedad de motos de alta calidad. Aquí podrás encontrar la moto perfecta para ti.</p>
         
     </div>
     <div class="container">
